--- a/sample1/index.html
+++ b/sample1/index.html
@@ -35,9 +35,7 @@
         <div class="container">
         <h1>ハンバーガーボタンサンプル1</h1>
         <ul>
-            <li>
-                <h2>ハンバーガーボタン開閉のみ</h2></a>
-            </li>
+            <li>ハンバーガーメニュー開閉のみ</li>
         </ul>
         <p>おっかさんは愕のきち子みちにけちで見夜中でした。いやどっかりまじめたですという壁ました。愉快んたことたはた実は額の生がいの所をはまるで変ましですて、ここなんてゴーシュが弾いれのたた。</p>
         <p>しすぎおれはかっこうが黒いだて一生けん命の孔のこども家にくらべ第一ドレミファソラシド曲の身動きが弾いといたです。ぐうぐうねむってしまいましたは今すっていまし。次は万云いゴーシュのようをすうてくれた。子はつぶ外国とそれを云いています。
