--- a/sample2/index.html
+++ b/sample2/index.html
@@ -16,9 +16,17 @@
         <div class="header-inner">
             <p class="header-title">サンプル2</p>
             <button id="hamburger-btn" class="hamburger-btn">
-                <span class="hamburger-btn-bar"></span>
-                <span class="hamburger-btn-bar"></span>
-                <span class="hamburger-btn-bar"></span>
+                <svg viewBox="0 0 44 44" xmlns:xlink="http://www.w3.org/1999/xlink" role="img"
+                    aria-labelledby="menuButtonTitle">
+                    <title id="menuButtonTitle">Menu</title>
+                    <symbol id="bar">
+                        <rect width="22" height="2" fill="#333"></rect>
+                    </symbol>
+                    <use xlink:href="#bar" x="11" y="21"></use>
+                    <use xlink:href="#bar" x="11" y="21"></use>
+                    <use xlink:href="#bar" x="11" y="21"></use>
+                </svg>
+                Menu
             </button>
             <nav class="header-nav">
                 <ul class="header-nav-list">
