--- a/sample1/index.html
+++ b/sample1/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="header-inner">
-            <p class="header-title">サンプル1</p>
+            <p class="header-title"><a href="/">トップへ</a></p>
             <button id="hamburger-btn" class="hamburger-btn">
                 <span class="hamburger-btn-bar"></span>
                 <span class="hamburger-btn-bar"></span>
