--- a/sample2/index.html
+++ b/sample2/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="header">
         <div class="header-inner">
-            <p class="header-title">サンプル2</p>
+            <p class="header-title"><a href="/">トップへ</a></p>
             <button id="hamburger-btn" class="hamburger-btn">
                 <svg viewBox="0 0 44 44" xmlns:xlink="http://www.w3.org/1999/xlink" role="img"
                     aria-labelledby="menuButtonTitle">
