--- a/sample3/index.html
+++ b/sample3/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ハンバーガーボタンサンプル2</title>
+    <title>ハンバーガーボタンサンプル3</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="./css/sample3.css">
+    <link rel="stylesheet" href=".css/sample3.css">
     <script src="./js/sample3.js" defer></script>
 </head>
 
 <body>
     <header class="header">
         <div class="header-inner">
-            <p class="header-title">サンプル3</p>
+            <p class="header-title"><a href="/">トップへ</a></p>
             <button id="hamburger-btn" class="hamburger-btn" aria-expanded="false" aria-hidden="true" aria-controls="drawer-nav">
                 <span class="hamburger-btn-bar"><i class="screen-reader-text">メニューを開閉する</i></span>
             </button>
