サンプル3修正

--- a/sample3/index.html
+++ b/sample3/index.html
@@ -7,7 +7,7 @@
     <title>ハンバーガーボタンサンプル3</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href=".css/sample3.css">
+    <link rel="stylesheet" href="./css/sample3.css">
     <script src="./js/sample3.js" defer></script>
 </head>
 
