--- a/sample2/index.html
+++ b/sample2/index.html
@@ -47,6 +47,10 @@
                 <li>オーバーレイ作成</li>
                 <li>背景スクロールの固定</li>
             </ul>
+            <p>ソースコードはこちら<br>
+                <a href="https://github.com/hiroghap1/hamburger-btn/tree/main/sample2" target="_blank">https://github.com/hiroghap1/hamburger-btn/tree/main/sample2</a></p>
+                <h2>ここから下はダミーテキストです</h2>
+    
             <p>おっかさんは愕のきち子みちにけちで見夜中でした。いやどっかりまじめたですという壁ました。愉快んたことたはた実は額の生がいの所をはまるで変ましですて、ここなんてゴーシュが弾いれのたた。</p>
             <p>しすぎおれはかっこうが黒いだて一生けん命の孔のこども家にくらべ第一ドレミファソラシド曲の身動きが弾いといたです。ぐうぐうねむってしまいましたは今すっていまし。次は万云いゴーシュのようをすうてくれた。子はつぶ外国とそれを云いています。
             </p>
