画面サイズの注意書き追加

--- a/sample3/index.html
+++ b/sample3/index.html
@@ -15,10 +15,12 @@
     <header class="header">
         <div class="header-inner">
             <p class="header-title"><a href="https://hiroghap1.github.io/hamburger-btn/">トップへ</a></p>
-            <button id="hamburger-btn" class="hamburger-btn" aria-expanded="false" aria-hidden="true" aria-controls="drawer-nav">
+            <button id="hamburger-btn" class="hamburger-btn" aria-expanded="false" aria-hidden="true"
+                aria-controls="drawer-nav">
                 <span class="hamburger-btn-bar"><i class="screen-reader-text">メニューを開閉する</i></span>
             </button>
-            <nav id="drawer-nav" class="header-nav" role="navigation" aria-hidden="false" aria-labelledby="hamburger-btn">
+            <nav id="drawer-nav" class="header-nav" role="navigation" aria-hidden="false"
+                aria-labelledby="hamburger-btn">
                 <ul class="header-nav-list">
                     <li class="header-nav-item"><a href="#" class="header-nav-item__link" tabindex="0">メニュー1</a></li>
                     <li class="header-nav-item"><a href="#" class="header-nav-item__link">メニュー2</a></li>
@@ -39,8 +41,12 @@
                 <li>フォーカスコントロール</li>
                 <li>アクセシビリティレベルA準拠予定（カーソルキー操作未実装）</li>
             </ul>
+            <p>※768px以下でハンバーガーメニューに切り替わります</p>
             <p>ソースコードはこちら<br>
-            <a href="https://github.com/hiroghap1/hamburger-btn/tree/main/sample3" target="_blank">https://github.com/hiroghap1/hamburger-btn/tree/main/sample3</a></p>
+                <a href="https://github.com/hiroghap1/hamburger-btn/tree/main/sample3"
+                    target="_blank">https://github.com/hiroghap1/hamburger-btn/tree/main/sample3</a>
+            </p>
+
             <h2>ここから下はダミーテキストです</h2>
             <p>おっかさんは愕のきち子みちにけちで見夜中でした。いやどっかりまじめたですという壁ました。愉快んたことたはた実は額の生がいの所をはまるで変ましですて、ここなんてゴーシュが弾いれのたた。</p>
             <p>しすぎおれはかっこうが黒いだて一生けん命の孔のこども家にくらべ第一ドレミファソラシド曲の身動きが弾いといたです。ぐうぐうねむってしまいましたは今すっていまし。次は万云いゴーシュのようをすうてくれた。子はつぶ外国とそれを云いています。
