sample1 サブメニュー

--- a/index.html
+++ b/index.html
@@ -36,8 +36,22 @@
                 <li>背景スクロールの固定</li>
                 <li>WAI-ARIA 管理</li>
                 <li>フォーカスコントロール</li>
-                <li>アクセシビリティレベルA準拠予定（カーソルキー操作未実装）</li>
+                <li>アクセシビリティレベルA準拠</li>
                 <li>ボタン描画難易度：中</li>
+            </ul>
+        </li>
+        <li><a href="./sample4/">
+                <h2>ハンバーガーボタンサンプル4</h2>
+            </a>
+            <ul>
+                <li>ハンバーガーメニュー開閉</li>
+                <li>オーバーレイ作成</li>
+                <li>背景スクロールの固定</li>
+                <li>WAI-ARIA 管理</li>
+                <li>フォーカスコントロール</li>
+                <li>アクセシビリティレベルA準拠</li>
+                <li>アクセシビリティWordPress公式テーマ準拠</li>
+                <li>ボタン描画難易度：高</li>
             </ul>
         </li>
     </ul>
