--- a/sample2/index.html
+++ b/sample2/index.html
@@ -30,11 +30,10 @@
             </button>
             <nav class="header-nav">
                 <ul class="header-nav-list">
-                    <li class="header-nav-item"><a href="" class="header-nav-item__link">メニュー1</a></li>
-                    <li class="header-nav-item"><a href="" class="header-nav-item__link">メニュー2</a></li>
-                    <li class="header-nav-item"><a href="" class="header-nav-item__link">メニュー3</a></li>
-                    <li class="header-nav-item"><a href="" class="header-nav-item__link">メニュー4</a></li>
-                    <li class="header-nav-item"><a href="" class="header-nav-item__link">メニュー5</a></li>
+                    <li class="header-nav-item"><a href="../sample1" class="header-nav-item__link" tabindex="0">サンプル1</a></li>
+                    <li class="header-nav-item"><a href="../sample2" class="header-nav-item__link">サンプル2</a></li>
+                    <li class="header-nav-item"><a href="../sample3" class="header-nav-item__link">サンプル3</a></li>
+                    <li class="header-nav-item"><a href="../sample4" class="header-nav-item__link">サンプル4</a></li>
                 </ul>
             </nav>
         </div>
