--- a/sample4/index.html
+++ b/sample4/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ハンバーガーボタンサンプル3</title>
+    <title>ハンバーガーボタンサンプル4</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="./css/sample3.css">
-    <script src="./js/sample3.js" defer></script>
+    <link rel="stylesheet" href="css/sample4.css">
+    <script src="js/sample4.js" defer></script>
 </head>
 
 <body>
@@ -32,18 +32,20 @@
     </header>
     <main>
         <div class="container">
-            <h1>ハンバーガーボタンサンプル3</h1>
+            <h1>ハンバーガーボタンサンプル4</h1>
             <ul>
                 <li>ハンバーガーメニュー開閉</li>
+                <li>オーバーレイ作成</li>
                 <li>背景スクロールの固定</li>
                 <li>WAI-ARIA 管理</li>
                 <li>フォーカスコントロール</li>
-                <li>アクセシビリティレベルA準拠予定（カーソルキー操作未実装）</li>
+                <li>アクセシビリティレベルA準拠</li>
+                <li>アクセシビリティWordPress公式テーマ準拠</li>
             </ul>
             <p>※768px以下でハンバーガーメニューに切り替わります</p>
             <p>ソースコードはこちら<br>
-                <a href="https://github.com/hiroghap1/hamburger-btn/tree/main/sample3"
-                    target="_blank">https://github.com/hiroghap1/hamburger-btn/tree/main/sample3</a>
+                <a href="https://github.com/hiroghap1/hamburger-btn/tree/main/sample4"
+                    target="_blank">https://github.com/hiroghap1/hamburger-btn/tree/main/sample4</a>
             </p>
 
             <h2>ここから下はダミーテキストです</h2>
