sample1 リンク修正

--- a/sample1/index.html
+++ b/sample1/index.html
@@ -23,7 +23,7 @@
             <nav class="header-nav">
                 <ul class="header-nav-list">
                     <li class="header-nav-item"><a href="../sample1/" class="header-nav-item__link" tabindex="0">サンプル1</a></li>
-                    <li class="header-nav-item"><a href="../sample2." class="header-nav-item__link">サンプル2</a>
+                    <li class="header-nav-item"><a href="../sample2" class="header-nav-item__link">サンプル2</a>
                         <ul class="header-submenu-list">
                             <li class="header-submenu-item"><a href="" class="header-submenu-item__link">サブメニュー1</a></li>
                             <li class="header-submenu-item"><a href="" class="header-submenu-item__link">サブメニュー2だよ</a></li>
