サンプル4（準備中）

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </li>
         <li><a href="./sample4/">
-                <h2>ハンバーガーボタンサンプル4</h2>
+                <h2>ハンバーガーボタンサンプル4（準備中）</h2>
             </a>
             <ul>
                 <li>ハンバーガーメニュー開閉</li>
