--- a/sample3/index.html
+++ b/sample3/index.html
@@ -38,7 +38,7 @@
                 <li>背景スクロールの固定</li>
                 <li>WAI-ARIA 管理</li>
                 <li>フォーカスコントロール</li>
-                <li>アクセシビリティレベルA準拠予定（カーソルキー操作未実装）</li>
+                <li>アクセシビリティレベルA準拠</li>
             </ul>
             <p>※768px以下でハンバーガーメニューに切り替わります</p>
             <p>ソースコードはこちら<br>
