--- a/sample1/index.html
+++ b/sample1/index.html
@@ -47,11 +47,14 @@
                 <a href="https://github.com/hiroghap1/hamburger-btn/tree/main/sample1"
                     target="_blank">https://github.com/hiroghap1/hamburger-btn/tree/main/sample1</a>
             </p>
-
             <h2>ここから下はダミーテキストです</h2>
             <p>おっかさんは愕のきち子みちにけちで見夜中でした。いやどっかりまじめたですという壁ました。愉快んたことたはた実は額の生がいの所をはまるで変ましですて、ここなんてゴーシュが弾いれのたた。</p>
             <p>しすぎおれはかっこうが黒いだて一生けん命の孔のこども家にくらべ第一ドレミファソラシド曲の身動きが弾いといたです。ぐうぐうねむってしまいましたは今すっていまし。次は万云いゴーシュのようをすうてくれた。子はつぶ外国とそれを云いています。
             </p>
+            <div class="image-box">
+                <img src="img/zoom3.jpeg" alt="" class="image-overlap1">
+                <img src="img/zoom4.jpeg" alt="" class="image-overlap2">
+            </div>
             <p>火花は兎がしばらくにねむらてゴーシュに火事のようをいうてセロを出てもう扉を行っと来まし。どうかぜひへんで銀に倒れましで。それあんなにに拍子を拭いて子へ死にだまし。むのくらいしかないのでが叩きでしまし。</p>
             <p>「窓へ過ぎます。</p>
             <p>扉、それへゴーシュ。云え。」ここは途中の上のますますこんどのままを出ました。砂糖は狸をお晩へ出て子が扉からするてがたがた午前ししだっきりをしました。</p>
