ドロワーメニュー表示時にPCサイズにするとスクロールできない不具合を修正

--- a/sample4/index.html
+++ b/sample4/index.html
@@ -49,6 +49,9 @@
             </p>
 
             <h2>ここから下はダミーテキストです</h2>
+            <div id="media-match">
+                <img src="../sample1/img/zoom3.jpeg" alt="">
+            </div>
             <p>おっかさんは愕のきち子みちにけちで見夜中でした。いやどっかりまじめたですという壁ました。愉快んたことたはた実は額の生がいの所をはまるで変ましですて、ここなんてゴーシュが弾いれのたた。</p>
             <p>しすぎおれはかっこうが黒いだて一生けん命の孔のこども家にくらべ第一ドレミファソラシド曲の身動きが弾いといたです。ぐうぐうねむってしまいましたは今すっていまし。次は万云いゴーシュのようをすうてくれた。子はつぶ外国とそれを云いています。
             </p>
