--- a/sample1/index.html
+++ b/sample1/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="./css/sample1.css">
+    <link rel="stylesheet" href="./css/sample1pc.css" media="screen and (min-width: 769px)">
+    <link rel="stylesheet" href="./css/sample1sp.css" media="screen and (max-width: 768px)">
     <script src="./js/sample1.js" defer></script>
 </head>
 
@@ -109,7 +111,7 @@
             </p>
             <p>「ゴーシュ、いきなりしだ気か。」歌をつけるたですぐゴーシュの畑をぽ舌んたりゴーシュがついて行きてゴーシュの頭押し出しの間へ許してくださらたまし。向うをいろたんがやめながらそれは顔たな。「歌などやめじゃ。ぼくの頭でし。」
             </p>
-            <p>水を云いましん。「ゴーシュにしましょ方た。」</p>
+            <p id="sample1">水を云いましん。「ゴーシュにしましょ方た。」</p>
             <p>写真鳥はして行っるまし。人しか行くと「光輝ですと。何の胸も、こども、舞台と云っだけじゃあますか。」ただ猫がお小太鼓まっ黒に「あ、何たんた。</p>
             <p>いやいいたてね。」とばったた。「恐いんか。これめのはさっき怒っのを広くじゃない、黒いようは誰には面白くじゃたか。」</p>
             <p>「それからみんなへ面白くんます。ではセロがまだないものとひまを思わず明るくものがからは参れて行くとはもちろんまげたます。」</p>
