feat(): button type 追加

--- a/sample1/index.html
+++ b/sample1/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="header-inner">
             <p class="header-title"><a href="https://hiroghap1.github.io/hamburger-btn/">トップへ</a></p>
-            <button id="hamburger-btn" class="hamburger-btn">
+            <button type="button" id="hamburger-btn" class="hamburger-btn">
                 <span class="hamburger-btn-bar"></span>
                 <span class="hamburger-btn-bar"></span>
                 <span class="hamburger-btn-bar"></span>
