--- a/sample2/index.html
+++ b/sample2/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="header-inner">
             <p class="header-title"><a href="https://hiroghap1.github.io/hamburger-btn/">トップへ</a></p>
-            <button id="hamburger-btn" class="hamburger-btn">
+            <button type="button" id="hamburger-btn" class="hamburger-btn">
                 <svg viewBox="0 0 44 44" xmlns:xlink="http://www.w3.org/1999/xlink" role="img"
                     aria-labelledby="menuButtonTitle">
                     <title id="menuButtonTitle">Menu</title>
