--- a/sample4/index.html
+++ b/sample4/index.html
@@ -15,7 +15,7 @@
     <header class="header">
         <div class="header-inner">
             <p class="header-title"><a href="https://hiroghap1.github.io/hamburger-btn/">トップへ</a></p>
-            <button id="hamburger-btn" class="hamburger-btn" aria-expanded="false" aria-hidden="true"
+            <button type="button" id="hamburger-btn" class="hamburger-btn" aria-expanded="false" aria-hidden="true"
                 aria-controls="drawer-nav">
                 <span class="hamburger-btn-bar"><i class="screen-reader-text">メニューを開閉する</i></span>
             </button>
