--- a/sample1/index.html
+++ b/sample1/index.html
@@ -66,6 +66,9 @@
             <p>孔は云いて窓を帰ったう。みんなはちょろちょろ下はないのですて水はいきなりいいんますた。「さっきの一番のわくで。弾く。」</p>
             <p>それはとてもあるたます。一つもまん中へ行っがいつかまし。それから遠くはどんと云いならませ。よかっぼんやりたとあげてくださいて東に給えようたセロから合わんでそしてぴたっと音楽でぺん考えついなまし。しばらくかとゴーシュはてとうとう来たなとわるくんをはさっきは甘藍のゴーシュだらまし。
             </p>
+            <p><input type="tel"></p>
+            <p><input type="text" inputmode="numeric"></p>
+            <p><input type="text" inputmode="tel"></p>
             <p>眼はみんなを一生けん命たかっこうのなかみんなをあるましようとな手からだを楽譜からおろしながらそれかつめんを居りてしまいなませ。「それにこんこん前のわく。</p>
             <p>ちがう。」うと叩きて弾きましかとついてぎっしり兎にかっこうへそんなになって野ねずみ踏んたた。「正確ます。</p>
             <p>かなりしてやろない。そんなのは代りの狸たのた。みんなをこういうむっと通りないことを。かっこう。かっこうじゃあそんなに顔一日は広くものたなあ。</p>
